<resources>
    <string name="app_name" translatable="false">W3Kiosk</string>
    <string name="url_preset" translatable="false">https://w3coach.de/</string>
    <string name="default_url" translatable="false">w3c</string>
    <string name="settings">Settings</string>
    <string name="keButton" translatable="false">KeyboardEmulatorButton</string>
    <string name="keyboardButton" translatable="false">KeyboardButton</string>
    <string name="displayButton" translatable="false">DisplayButton</string>
    <string name="settingsButton" translatable="false">SettingsButton</string>
    <string name="enable_autoscale">Adjust screen size</string>
    <string name="mobile_mode">Mobile Mode</string>
    <string name="website1">First client url (without %s)</string>
    <string name="copyright" translatable="false">© 2024, NASS e.K.</string>
    <string name="set_home_button" translatable="false">Set home button</string>
    <string name="set_launcher_button" translatable="false">Set launcher button</string>
    <string name="settings_save_button" translatable="false">Settings save button</string>
    <string name="system_settings_button" translatable="false">System settings button</string>
    <string name="code_or_help">Enter code or \'h\' for help</string>
    <string name="cancel">Cancel</string>
    <string name="an_error_occurred">An error occurred:\u0020</string>
    <string name="teamviewerbutton" translatable="false">teamviewerButton</string>
    <string name="anydeskbutton" translatable="false">anydeskButton</string>
    <string name="closebutton" translatable="false">closeButton</string>
    <string name="logo" translatable="false">logo</string>
    <string name="helpText">If installed, you will see buttons for TeamviewerⓇ or AnydeskⓇ above. Please start these apps on request of the support only.\n\nIf no button(s) can be seen, head over to the GoogleⓇ Playstore™ and install either TeamviewerⓇ Quicksupport™ or AnydeskⓇ.\n\nTo reload the configured url please press and hold the W3Coach button in the bottom right corner.</string>
    <string name="helpTextTv">If there are 2 urls configured you can switch between these urls with the \'back\' key.\n\nTo call the menu press the \'menu\' key.\n\nTo reload the application please press the \'home\' button.\n\n</string>
    <string name="invalid_url">Invalid or unreachable url:\u0020</string>
    <string name="additional_perms">Additional permissions are needed!</string>
    <string name="cam_permission">Camera access denied, recording impossible!</string>
    <string name="error">Error</string>
    <string name="check_internet">Check your internet connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="running_on">Running on:\u0020</string>
    <string name="disable_autofill">Disable AutoFill</string>
    <string name="autofill_text">AutoFill in a kiosk app is insecure. Please disable AutoFill.</string>
    <string name="camera_access">Camera access</string>
    <string name="mic_access">Microphone access</string>
    <string name="phone_access">Phone access</string>
    <string name="overlay_permission">Overlay permission</string>
    <string name="storage_permission">Storage permission</string>
    <string name="powermenu">Power menu</string>
    <string name="login_name">Login name:</string>
    <string name="autologin">Autologin first client url</string>
    <string name="login_password">Login password:</string>
    <string name="write_system_settings">System settings</string>
    <string name="permissions">Permissions</string>
    <string name="scanner_button" translatable="false">scannerButton</string>
    <string name="service_description">Service to call the powermenu</string>
    <string name="noNetwork">No network: Please check and reload application.</string>
    <string name="website2">Second client url</string>
    <string name="chooseAction">Choose an action</string>
    <string name="toggleUrl">Toggle URL</string>
    <string name="deactivateMenubutton">(de-)activate) Menubutton</string>
    <string name="showHelp">Show help</string>
    <string name="devInfo">Manufacturer and Model:\n%1$s %2$s\n\nActual IP address:\n%3$s\n\nFirmware installed:\n%4$s</string>
    <string name="app1">App1</string>
    <string name="app2">App2</string>
    <string name="app3">App3</string>
    <string name="app4">App4</string>
    <string name="app5">App5</string>
    <string name="appPw">"application password"</string>
    <string name="choose_app">Choose an app</string>
    <string name="apps">Apps</string>
    <string name="reboot">Reboot</string>
    <string name="enterPassword">Please enter password:</string>
    <string name="about">For information visit https://github.com/manfred-mueller/W3Kiosk. Email support at support@nass-ek.de.</string>
    <string name="updateAvailable">Update version %1$s found!</string>
    <string name="versionUptodate">Your version %1$s from %2$s is up to date!</string>
    <string name="urlTimeout">Timeout second/third client url in sconds: </string>
    <string name="appInfo">%1$s %2$s from %3$s\n\nConnection: %4$s\n\nDevice rooted: %5$s</string>
    <string name="apply">Apply</string>
    <string name="ignore">ignore</string>
    <string name="check_update">Autoupdate</string>
    <string name="dismiss">Dismiss</string>
    <string name="UpdateAvailable">%1$s-Update available</string>
    <string name="UpdateDescription">Update to ensure that you are using the latest version of the app.</string>
    <string name="apps_permission">Install apps</string>
    <string name="zoomFactor">"Webview zoom: "</string>
    <string name="website3">Third client url</string>
    <string name="setAsStartAppText">Would you like to set this app as your Start app?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="NoStartApp">No Start app</string>
    <string name="NoStartAppRationale">Setting this kiosk app as the Start app gives you more security and reliability. Are you sure you don\'t want to set it as the Start app?</string>
    <string name="setAsStartApp">Set as Start app</string>
    <string name="changeStartApp">Change Start app</string>
    <string name="imSure">I\'m Sure</string>
    <string name="alreadyStartApp">This app is already set as your Start app.</string>
    <string name="marquee">Marquee</string>
    <string name="marqueeText">Marquee text:</string>
    <string name="marqueeTimeout">Marquee timeout in minutes:</string>
    <string name="marqueeSpeed">Speed:</string>
    <string name="slow">slow</string>
    <string name="normal">normal</string>
    <string name="fast">fast</string>
    <string name="W3Lager" translatable="false">www.w3coach.de</string>
    <string name="marqueeHint">eg. www.w3coach.de (max. 35 characters)</string>
    <string name="apiKey" translatable="false">Api-Key:</string>
    <string name="deviceId">Device-Id:</string>
    <string name="useChrome">Use Chrome</string>
    <string name="reLoad">To reload the url, hold the down right button pressed.</string>
    <string name="device_admin_description" translatable="false">W3KioskDeviceAdminReceiver</string>
    <string name="dhl">DHL-App</string>
</resources>
