<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    android:onClick="hideKeyboard"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="UsingOnClickInXml">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="20"
        android:onClick="hideKeyboard"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tv_Button"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/teamviewerbutton"
                android:onClick="tvClick"
                android:visibility="gone"
                app:srcCompat="@drawable/teamviewer"
                tools:ignore="UsingOnClickInXml" />

            <ImageButton
                android:id="@+id/ad_Button"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/anydeskbutton"
                android:onClick="adClick"
                android:visibility="gone"
                app:srcCompat="@drawable/anydesk"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/helpText"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/txtUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/txtSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/txtUpdate" />

        </LinearLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/close_Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:contentDescription="@string/closebutton"
        android:onClick="closeClick"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="UsingOnClickInXml" />

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginBottom="18dp"
        android:onClick="sdClick"
        android:text="@string/copyright"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>