<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:onClick="hideKeyboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:text="@string/settings"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:onClick="hideKeyboard"
        android:layout_weight="20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/mobile_mode"
                    android:textSize="15sp"
                    android:focusable="auto"
                    android:layout_toStartOf="@id/mobileToggle" />

                <Switch
                    android:id="@+id/mobileToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/colorBackground"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/check_autofill"
                    android:textSize="15sp"
                    android:focusable="auto"
                    android:layout_toStartOf="@id/autofillToggle" />

                <Switch
                    android:id="@+id/autofillToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:background="?android:attr/colorBackground"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:focusable="auto"
                    android:text="@string/website"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/clientEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:cursorVisible="true"
                    android:gravity="start"
                    android:hint="@string/default_url"
                    android:inputType="textUri|text"
                    android:nextFocusLeft="@id/clientEditText"
                    android:nextFocusUp="@id/clientEditText"
                    android:singleLine="true"
                    android:text="@string/default_url"
                    android:textCursorDrawable="@color/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:onClick="autofillSettings"
            android:text="@string/copyright"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/setLauncherButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/set_launcher_button"
            android:onClick="setLauncher"
            app:srcCompat="@android:drawable/ic_dialog_dialer" />

        <ImageButton
            android:id="@+id/systemSettingsButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/system_settings_button"
            android:onClick="startSystemSettings"
            app:srcCompat="@android:drawable/ic_menu_manage" />

        <ImageButton
            android:id="@+id/settingsSaveButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:contentDescription="@string/settings_save_button"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </LinearLayout>
</LinearLayout>